# Akira99

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  X_CONTENT_NATURAL.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
akira99/: __init__.py  betting_engine.py  models.py  outcome_resolver.py  scenario_generator.py  solana_settlement.py
tests/: __init__.py  test_betting.py  test_models.py  test_outcomes.py  test_scenarios.py  test_settlement.py
