[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akira99"
version = "1.0.0"
description = "Story-based prediction gambling on Solana DEX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.20.0",
    "solders>=0.18.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]
